--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -20,6 +20,12 @@
 
     <string name="wake_message">РОТАПОДЪЁМ!!!</string>
     <string name="select_music">Выберете музыку</string>
+    <string name="alarm_after">Будильник зазвонит через</string>
+
+    <string name="days_alias">дн.</string>
+    <string name="hours_alias">ч.</string>
+    <string name="minutes_alias">м.</string>
+    <string name="seconds_alias">сек.</string>
 
     <string-array name="days_array">
         <item>monday</item>
